name:                ad-types
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
author:              Peter Fogg
maintainer:          peter.p.fogg@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010

executable ad-types
  build-depends:       base >=4.7 && <4.8
                     , template-haskell
  hs-source-dirs:      src, .
  default-language:    Haskell2010
  main-is:             Main.hs
